src/objects/ccrz__E_PriceList__c.object
<CustomObject>
    <description>Represents a grouping of products to control pricing and entitlements.  The B2B Commerce pricelist object controls both pricing and entitlements, but can be used just for the purposes of entitlements. A list needs to be created for each currency that needs to be represented, allowing for different entitlments and pricing based on the locale and currency.</description>
    <fields>
        <fullName>EC_Price_List_Type__c</fullName>
        <description>This field stores the type of pricelist i.e. Sales Org, Customer Group</description>
        <inlineHelpText>This field stores the type of pricelist i.e. Sales Org, Customer Group</inlineHelpText>
        <label>Price List Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Type_Expansion__c</fullName>
        <formula>IF(EC_Price_List_Type__c = &apos;FBA&apos;, &apos;Fixed BA&apos;, IF(EC_Price_List_Type__c = &apos;USG&apos;,&apos;Usage&apos;,IF(EC_Price_List_Type__c =&apos;USR&apos;,&apos;Use Risk&apos;,IF(EC_Price_List_Type__c=&apos;SBA&apos;,&apos;Special Pricing Agreement&apos;,&apos;&apos;))))</formula>
        <label>Price List Type Expansion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>Required - The 3-character ISO currency code corresponding to this list. For example, USD</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomerTypeCode__c</fullName>
        <label>Customer Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Desc__c</fullName>
        <description>A description of the pricelist - internal only</description>
        <label>Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this pricelist record is active</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The date on which the pricelist is no longer active.  For example, if the EndDate__c is set to July 1, 2015 then the last date that this price list is valid will be June 30, 2015.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__PricelistId__c</fullName>
        <description>External reference id for this entry</description>
        <externalId>true</externalId>
        <label>Pricelist Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller this Price List belongs to.</description>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Price Lists</relationshipLabel>
        <relationshipName>E_PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this pricelist record is active. This is the first date the pricing/entitlements will be applied</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Mulit-select list that allows you to assign the pricelist to one or more storefronts.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__SupplierKey__c</fullName>
        <description>Deprecated</description>
        <label>Supplier Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Allocated__c</fullName>
        <label>BA Allocated</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BA_Consumed__c</fullName>
        <label>BA Consumed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BA_Number__c</fullName>
        <description>To store BA number</description>
        <label>BA Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>CC Price List</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Desc__c</columns>
        <columns>ccrz__CustomerTypeCode__c</columns>
        <columns>ccrz__PricelistId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PA</value>
        </filters>
        <label>CAD</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>INST</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>